syntax = "proto3";

////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//Individual message packet types

//Identify the server to clients
message ServerHello
{
	uint32	magic		= 1;	//magic number, always 0x444c4942 ("BILD")
	uint32	version		= 2;	//protocol version supported by server (always 1 for now)	
};

//Identify the client to the server
message ClientHello
{
	uint32	magic		= 1;	//magic number, always 0x444c4942 ("BILD")
	uint32	version		= 2;	//protocol version supported by server (always 1 for now)	
	
	enum ClientType
	{
		CLIENT_DEVELOPER = 0;
		CLIENT_BUILD = 1;
	};
	uint32	type		= 3;	//type of client
	
	string	hostname	= 4;	//hostname for debug messages
};

////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
//Top-level message type

message SplashMsg
{
	oneof Payload
	{
		ServerHello serverHello = 1;
		ClientHello clientHello = 2;
	}
};
